--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,12 @@
     <packaging>pom</packaging>
 
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
-        <maven.compiler.release>21</maven.compiler.release>
+        <maven.compiler.release>22</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <modules>
-        <module>webgpu-sys</module>
+        <module>webgpu-panama</module>
         <module>webgpu</module>
     </modules>
 
