--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 target/
 .idea/
 .vscode/
-webgpu/.settings/org.eclipse.core.resources.prefs
-webgpu/.settings/org.eclipse.jdt.apt.core.prefs
-webgpu/.settings/org.eclipse.jdt.core.prefs
-webgpu/.settings/org.eclipse.m2e.core.prefs
+.settings/
+.project
+.settings/org.eclipse.jdt.apt.core.prefs
+.settings/org.eclipse.jdt.core.prefs
+.settings/org.eclipse.m2e.core.prefs
 .settings/org.eclipse.core.resources.prefs
 .settings/org.eclipse.m2e.core.prefs
