--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,32 +22,32 @@ jobs:
     steps:
     
     - uses: actions/checkout@v4
-    - name: Checkout repo with submodules
-      uses: actions/checkout@v4
-      with:
-        submodules: true   # Recursively initialize submodules
+    # - name: Checkout repo with submodules
+    #   uses: actions/checkout@v4
+    #   with:
+    #     submodules: true   # Recursively initialize submodules
     
-    - name: Install SDKMAN!
-      run: |
-        curl -s "https://get.sdkman.io" | bash
-        source "$HOME/.sdkman/bin/sdkman-init.sh"
-        sdk version
-        source "/home/runner/.sdkman/bin/sdkman-init.sh"
-        sdk install jextract
-        sdk install maven
-        yes | sdk install java 24-open
-        mvn install
+    # - name: Install SDKMAN!
+    #   run: |
+    #     curl -s "https://get.sdkman.io" | bash
+    #     source "$HOME/.sdkman/bin/sdkman-init.sh"
+    #     sdk version
+    #     source "/home/runner/.sdkman/bin/sdkman-init.sh"
+    #     sdk install jextract
+    #     sdk install maven
+    #     yes | sdk install java 24-open
+    #     mvn install
         
 
    
-    # - name: Set up JDK 21
-    #   uses: actions/setup-java@v4
-    #   with:
-    #     java-version: '21'
-    #     distribution: 'temurin'
-    #     cache: maven
-    # - name: Build with Maven
-    #   run: mvn -B package --file pom.xml
+    - name: Set up JDK 22
+      uses: actions/setup-java@v4
+      with:
+        java-version: '22'
+        distribution: 'temurin'
+        cache: maven
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
