--- a/webgpu-generated/pom.xml
+++ b/webgpu-generated/pom.xml
@@ -12,6 +12,11 @@
     </parent>
 
     <dependencies>
+        <dependency>
+            <groupId>org.webgpu</groupId>
+            <artifactId>utils</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
