--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     </properties>
 
     <modules>
+        <module>webgpu-utils</module>
         <module>webgpu-generator</module>
         <module>webgpu-panama</module>
         <!-- <module>webgpu</module> -->
