--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,21 +23,7 @@ jobs:
     - name: Checkout repo with submodules
       uses: actions/checkout@v4
       with:
-        submodules: true   # Recursively initialize submodules
-    
-    # - name: Install SDKMAN!
-    #   run: |
-    #     curl -s "https://get.sdkman.io" | bash
-    #     source "$HOME/.sdkman/bin/sdkman-init.sh"
-    #     sdk version
-    #     source "/home/runner/.sdkman/bin/sdkman-init.sh"
-    #     sdk install jextract
-    #     sdk install maven
-    #     yes | sdk install java 24-open
-    #     mvn install
-        
-
-   
+        submodules: recursive   # Recursively initialize submodules
     - name: Set up JDK 25
       uses: actions/setup-java@v4
       with:
